Updated solution. Still pending issue with spacing

--- a/module-2-solution/css/styles.css
+++ b/module-2-solution/css/styles.css
@@ -3,22 +3,45 @@
   box-sizing: border-box;
 }
 h1 {
+    text-align: center;
   margin-bottom: 15px;
 }
 
 div {
     position: relative;
-    padding: 10px;
-    margin: 10px;
-}
-h2 {
-    border: 1px solid black;
-    float: right;
+    background-color: grey;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
-section {
-    clear: right;
+h2 {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
+
+p {
+    padding: 10px;
+}
+
+#chicken {
+    background-color: aqua;
+}
+
+#beef {
+    background-color: pink;
+}
+
+
+#sushi {
+    background-color: orange;
+}
+
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
